--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,4 +2,56 @@
     background-color: $color-primary;
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1;
+    display: flex;
+    justify-content: center;
+
+    @media only screen and (max-width: $bg-large) {
+        grid-row: 1 / 2;
+        grid-column: 1 / -1;
+        justify-content: flex-end;
+        align-items: center;
+    }
+}
+
+.nav-btn {
+    border: none;
+    border-radius: 0;
+
+    width: 4.5rem;
+    height: 2px;
+    background-color: #fff;
+    position: relative;
+    margin-top: 4.5rem;
+
+    &::before,
+    &::after {
+        content: '';
+        background-color: #fff;
+        width: 4.5rem;
+        height: 2px;
+        display: block;
+    }
+
+    &::before {
+        transform: translateY(-1.5rem);
+    }
+
+    &::after {
+        transform: translateY(1.5rem);
+        height: 2.5px;
+    }
+
+    @media only screen and (max-width: $bg-large) {
+        margin-top: 0;
+        margin-right: 3rem;
+
+        &::before {
+            transform: translateY(-1.2rem);
+        }
+
+        &::after {
+            transform: translateY(1.2rem);
+            height: 1.5px;
+        }
+    }
 }
